tdf#43257 SVG: Id value can contain other characters than alphanumerics

Ie: "graph-1", "graph_1", "graph.1", etc...

Besides, modify !( str_p("'") | str_p("\"") ) condition as the 'fill' attribute  can be defined as fill="url('#graph1')" but not as fill="url("#graph1")"

Change-Id: I7fb2c5b61487214ab02b207ad64d29bb2a1e107a